[package]
name = "portforward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_portforward"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.17.1"
pyo3 = "0.18.1"
tokio = { version = "1.27.0", features = ["full"] }
typed-builder = "0.14.0"
