[package]
name = "portforward"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "portforward"
crate-type = ["cdylib"]

[features]
default = ["openssl-tls", "kubederive", "ws", "latest", "runtime"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime", "kube/unstable-runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_26"]

[dependencies]
pyo3 = "^0.18.0"
pyo3-asyncio = { version = "^0.18.0", features = ["attributes", "tokio-runtime"] }
once_cell = "1.17.1"
typed-builder = "0.14.0"
futures = "0.3.17"
anyhow = "1.0.44"
log = "0.4.17"
env_logger = "0.10.0"
# tokio
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.0"
tokio-stream = { version = "0.1.9", features = ["net"] }
# k8s
kube = { version = "^0.81.0", default-features = false, features = ["admission"] }
kube-derive = { version = "^0.81.0", default-features = false } # only needed to opt out of schema
k8s-openapi = { version = "0.17.0", default-features = false }
openssl = { version = "0.10.52", features = ["vendored"] }
