[package]
name = "portforward"
version = "0.7.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "portforward"
crate-type = ["cdylib"]

[features]
default = ["openssl-tls", "kubederive", "ws", "latest", "runtime"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime", "kube/unstable-runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_32"]

[dependencies]
once_cell = "1.21.3"
typed-builder = "0.21.0"
futures = "0.3.31"
anyhow = "1.0.98"
log = "0.4.27"
env_logger = "0.11.8"
# tokio
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
tokio-stream = { version = "0.1.17", features = ["net"] }
# k8s
kube = { version = "^0.99.0", default-features = false, features = ["admission"] }
kube-derive = { version = "^0.99.0", default-features = false } # only needed to opt out of schema
k8s-openapi = { version = "0.24.0", default-features = false }
openssl = { version = "0.10.52", features = ["vendored"] }
pyo3-async-runtimes = { version = "=0.24.0", features = ["attributes", "tokio-runtime"] }
pyo3-ffi = "0.24.1"
pyo3 = "0.24.1"
