[tool.poetry]
name = "portforward"
version = "0.1.0"
description = "Kubernetes Port-Forward Go-Edition For Python"
authors = ["corka149 <corka149@mailbox.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
