[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "portforward"
version = "0.5.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = []

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.bumpversion]
current_version = "0.5.0"
tag = true
commit = true

[[tool.bumpversion.files]]
filename = "portforward.py"

[[tool.bumpversion.files]]
filename = "Cargo.toml"
